--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <br>
           GB Exchange dedicated support team is<br> on standby 24/7 to help via live chat on<br> the app or through email in the<br> language of your choice: Spanish, English,<br> French, Cryptonian.
         </p>
-        <a href="#"><button class="cnt-btn">Contact Us Now!</button></a>
+        <a href="https://wa.me/2348139498576"><button class="cnt-btn">Contact Us Now!</button></a>
       </div>
       <dotlottie-player class="lottie" src="https://lottie.host/2ce0fd77-5cb3-4fc9-92f9-b90ecff39e0a/opoDUGPosv.json" background="transparent" speed="1" loop autoplay></dotlottie-player>
     </section>
